# phosphor

./: .gitignore  Cargo.toml  build.rs  readme.md
.github/workflows/: build.yml
assets/: readme.md
src/: buffer.rs  camera.rs  compute.rs  cpu_pool.rs  lib.rs  names.rs  renderer.rs
src/geometry/: mesh.rs  mod.rs  vertex.rs  vertexgroup.rs
src/material/: mod.rs  params.rs
src/memory/: xalloc.rs
src/pipeline/: deferred_lighting.rs  deferred_shading.rs  lines.rs  mod.rs  occlusion.rs  postprocess.rs  text.rs
src/pipeline/imgui/: imgui.frag  imgui.vert  mod.rs
src/registry/: mod.rs
src/renderpass/: deferred_lighting.rs  mesh_shading.rs  mod.rs  postprocess.rs  resolve_scene_color.rs
src/shader/: atmosphere.inc  bsdf.inc  constants.inc  debug_vis.inc  deferred_lighting.frag  deferred_shading.frag  deferred_shading.vert  histogram.comp  lights.inc  mod.rs  reduce128.comp  resolve.frag  runtime.rs  skybox.frag  skybox.vert  tonemapper.frag
src/stage/: mesh_shading.rs  mod.rs  resolve_scene_color.rs
