[package]
name = "phosphor"
description = "a deferred PBR renderer for vulkan"
version = "0.0.1"
authors = ["trashbyte <github@trashbyte.io>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/trashbyte/phosphor"
keywords = ["renderer", "pbr", "vulkan"]
categories = ["game-development", "graphics", "rendering::engine"]

[dependencies]
cgmath = { version = "0.17.0", features = [ "swizzle" ] }
rusttype = { version = "0.8.1", features = ["gpu_cache"] }

time = "0.1.42"
rand = "0.7.2"
noise = "0.6.0"
fnv = "1.0.6"
smallvec = "1.0.0"
hashbrown = "0.6.2"
parking_lot = "0.9.0"
lazy_static = "1.4.0"
image = "0.22.3"
winit = "0.19.4"
vulkano = "0.16.0"
xalloc = "0.2.6"
half = "1.4.0"
tobj = "0.1.11"

# custom version with docking
#imgui = { path = "../imgui-rs" }
# stable version
imgui = "0.2.1"

vulkano-shaders = "0.16.0"
hemlock = "0.0.2"
toolbelt = "0.0.2"
nametag = "0.0.1"

[build-dependencies]
rerun_except = "0.1.0"
walkdir = "2.2.9"
regex = "1.3.1"
